# heliumos.org

./: .containerignore  .devcontainer.json  .gitignore  Containerfile  Makefile  build.sh  distrobox.ini  httpd.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.devcontainer/: Containerfile  devcontainer.json
.github/: dependabot.yaml
data/: blog_post.json  hardware_device.json  how_to.json  question_answer.json  release.json  sites.json
heliumos_website/: manage.py  package-lock.json  package.json  tailwind.config.js
heliumos_website/heliumos_website/: asgi.py  settings.py  urls.py  wsgi.py
heliumos_website/www/: admin.py  models.py  sitemaps.py  urls.py  views.py
heliumos_website/www/migrations/: 0001_initial.py  0002_release.py  0003_alter_release_torrent_url.py  0004_blogpost_is_published.py  0005_questionanswer.py  0006_alter_questionanswer_options_questionanswer_order.py  0007_hardwaredevice_alter_blogpost_options.py  0008_alter_hardwaredevice_options.py  0009_howtwo.py  0010_rename_howtwo_howto.py
heliumos_website/www/templates/www/: base.html  blog.html  blog_post.html  docs.html  download.html  hardware.html  index.html  press_kit.html  release_list.html  roadmap.html
heliumos_website/www/templates/www/snippets/: timeline_point.html  timeline_point_done.html  timeline_point_not_done.html
www/static/www/: styles.css
