[project]
name = "heliumos-website"
version = "0.1.0"
dependencies = [
    "django>=5,<6",
    "django-extensions>=3,<4",
    "markdown>=3.6,<4"
]
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"
