[project]
name = "heliumos-website"
version = "0.1.0"
dependencies = [
    "django==5",
    "django-distill>=3.2",
    "django-extensions==3",
    "markdown==3.6",
    "whitenoise"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"
